recent videos/album

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
   <head>
     <title>year unknown</title>
     <meta charset="utf-8">
-    <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
+    <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=0.9, maximum-scale=0.9, minimum-scale=0.9" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <link rel="stylesheet" href="https://brick.a.ssl.fastly.net/Source+Code+Pro:200">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>year unknown</h1>
+    <p>An audio-visual project with (almost) daily output.</p>
+    <div id="wrapper">
+      <div id="albums">
+        <iframe frameborder="0" src="https://bandcamp.com/EmbeddedPlayer/album=648525109/size=large/bgcol=333333/linkcol=4ec5ec/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/spectrum">Spectrum</a></iframe>
+      </div>
+      <div id="videos">
+        <iframe src="https://player.vimeo.com/video/157820188" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/157545103" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/157245309" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+    </div>
   </body>
 </html>
