--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>An audio-visual project with (almost) daily output.</p>
     <div id="wrapper">
       <div id="albums">
+        <iframe frameborder="0" src="https://bandcamp.com/EmbeddedPlayer/album=2130756934/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/household-appliances">Household Appliances</a></iframe>
         <iframe frameborder="0" src="https://bandcamp.com/EmbeddedPlayer/album=648525109/size=large/bgcol=333333/linkcol=4ec5ec/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/spectrum">Spectrum</a></iframe>
       </div>
       <div id="videos">
