--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   </head>
   <body>
     <h1>year unknown</h1>
-    <p>An audio-visual project with (almost) daily output.</p>
+    <p>An audio-visual experiment</p>
     <div id="wrapper">
       <div id="albums">
         <iframe frameborder="0" src="https://bandcamp.com/EmbeddedPlayer/album=2130756934/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/household-appliances">Household Appliances</a></iframe>
         <iframe frameborder="0" src="https://bandcamp.com/EmbeddedPlayer/album=648525109/size=large/bgcol=333333/linkcol=4ec5ec/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/spectrum">Spectrum</a></iframe>
       </div>
       <div id="videos">
+        <iframe src="https://player.vimeo.com/video/158279225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe src="https://player.vimeo.com/video/157956899" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe src="https://player.vimeo.com/video/157820188" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe src="https://player.vimeo.com/video/157545103" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
