--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div id="albums">
         <a href="https://yearunknown.bandcamp.com">Bandcamp</a>
         <a href="https://vimeo.com/yearunknown">Vimeo</a>
+        <a href="https://twitter.com/year_unknown">Twitter</a>
       </div>
     </div>
   </body>
