--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <iframe src="https://player.vimeo.com/video/160476069?autoplay=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div id="vid-wrapper">
+      <iframe src="https://player.vimeo.com/video/160476069?autoplay=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
     <div id="wrapper">
       <h1>year unknown</h1>
       <div id="albums">
