--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <h1>year unknown</h1>
       <div id="albums">
         <a href="https://yearunknown.bandcamp.com">Bandcamp</a>
+        <a href="https://soundcloud.com/yearunknown">Soundcloud</a>
         <a href="https://vimeo.com/yearunknown">Vimeo</a>
         <a href="https://twitter.com/year_unknown">Twitter</a>
       </div>
