--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>year unknown</title>
     <meta charset="utf-8">
-    <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=0.9, maximum-scale=0.9, minimum-scale=0.9" name="viewport">
+    <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
-    <link rel="stylesheet" href="https://brick.a.ssl.fastly.net/Oswald:200">
+    <link rel="stylesheet" href="https://brick.a.ssl.fastly.net/Oswald:400">
     <link rel="stylesheet" href="style.css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -19,11 +19,8 @@
     </script>
   </head>
   <body>
-    <div id="vid-wrapper">
-      <iframe src="https://player.vimeo.com/video/161375621?autoplay=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
     <div id="wrapper">
-      <h1>year unknown</h1>
+      <iframe style="border: 0; width: 320px; height: 440px;" src="https://bandcamp.com/EmbeddedPlayer/album=3125194065/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/free-electricity">Free Electricity by Year Unknown</a></iframe>
       <div id="albums">
         <a href="https://yearunknown.bandcamp.com">Bandcamp</a>
         <a href="https://soundcloud.com/yearunknown">Soundcloud</a>
