--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   </head>
   <body>
     <div id="wrapper">
-      <iframe style="border: 0; width: 320px; height: 440px;" src="https://bandcamp.com/EmbeddedPlayer/album=3125194065/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/free-electricity">Free Electricity by Year Unknown</a></iframe>
       <div id="albums">
         <a href="https://yearunknown.bandcamp.com">Bandcamp</a>
         <a href="https://soundcloud.com/yearunknown">Soundcloud</a>
@@ -28,5 +27,6 @@
         <a href="https://twitter.com/year_unknown">Twitter</a>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
