--- a/index.html
+++ b/index.html
@@ -5,28 +5,18 @@
     <meta charset="utf-8">
     <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
-    <link rel="stylesheet" href="https://brick.a.ssl.fastly.net/Oswald:400">
     <link rel="stylesheet" href="style.css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-75640787-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </head>
   <body>
+    <video src="squares.mp4" poster="squares.png" loop autoplay></video>
     <div id="wrapper">
-      <div id="albums">
+      <div id="links">
         <a href="https://yearunknown.bandcamp.com">Bandcamp</a>
         <a href="https://soundcloud.com/yearunknown">Soundcloud</a>
         <a href="https://vimeo.com/yearunknown">Vimeo</a>
         <a href="https://twitter.com/year_unknown">Twitter</a>
+        <a href="https://www.instagram.com/yearunknown">Instagram</a>
       </div>
     </div>
-    <script src="main.js"></script>
   </body>
 </html>
