--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <video src="squares.mp4" poster="squares.png" loop autoplay></video>
+    <div id="triangle3"></div>
+    <div id="triangle"></div>
+    <div id="triangle2"></div>
     <div id="wrapper">
       <div id="links">
         <a href="https://yearunknown.bandcamp.com">Bandcamp</a>
@@ -16,6 +19,9 @@
         <a href="https://vimeo.com/yearunknown">Vimeo</a>
         <a href="https://twitter.com/year_unknown">Twitter</a>
         <a href="https://www.instagram.com/yearunknown">Instagram</a>
+      </div>
+      <div id="contact">
+        <a href="mailto:j@yearunknown.com">contact</a>
       </div>
     </div>
   </body>
