--- a/updates/index.html
+++ b/updates/index.html
@@ -6,9 +6,9 @@
     <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline" rel="stylesheet">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="20170302.html">March 2, 2017</a>
+    <iframe src="20170827/index.html"></iframe>
   </body>
 </html>
