updated archive; links update

--- a/updates/20170901/index.html
+++ b/updates/20170901/index.html
@@ -16,7 +16,8 @@
     <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2972839316/size=small/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://yearunknown.bandcamp.com/album/thinslice-1">Thinslice 1 by Year Unknown</a></iframe>
     <div id="links">
       <a href="../../archive/index.html">archive</a>
-      <a href="https://yearunknown.bandcamp.com">bandcamp</a>
+      <a href="https://yearunknown.bandcamp.com">bandcamp 1</a>
+      <a href="https://jyf0.bandcamp.com">bandcamp 2</a>
     </div>
   </body>
 </html>
